fixed some spacing issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
 
 @media (min-height: 850px) {
   .mainContent {
-    height: calc(100vh - 60px); /* 100% height minus height of footer */
+    min-height: calc(100vh - 60px); /* 100% height minus height of footer */
   }
   .footer {
     display: flex;
@@ -37,7 +37,7 @@ body {
 
 @media (max-height: 850px) {
   .mainContent {
-    height: 100vh;
+    min-height: 100vh;
   }
   .footer {
     font-size: 9px;
@@ -67,6 +67,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: -1.5rem;
+  margin-bottom: 1rem;
 }
 
 .letter-box {
